<?xml version="1.0"?>
<package format="2">
  <name>point_cloud_aligner</name>
  <version>0.0.0</version>
  <description>A collection of lidar-lidar calibration tools.</description>

  <maintainer email="goktug@leodrive.com">goktug_yildirim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>dynamic_reconfigure</build_depend>

</package>
